kde-workspace (4:4.8.4-0r0) UNRELEASED; urgency=low

  * New upstream release. 

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.8.4.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 05 Jun 2012 16:48:51 +0200

kde-workspace (4:4.8.3-2) experimental; urgency=low

  * Team upload.

  [ José Manuel Santamaría Lema ]
  * Add watch file.
  * Add nlist_ftbfs_krefreebsd.diff, avoids FTBFS'es on kfreebsd.
  * Add version for libpng build depend, now it's libpng12-dev (<< 1.5), this
    avoids building this package against the libpng packages from experimental.

 -- Modestas Vainius <modax@debian.org>  Sat, 02 Jun 2012 18:03:41 +0300

kde-workspace (4:4.8.3-1) experimental; urgency=low

  * New upstream release:
    - fixes the incorrect behaviour when "show minimized windows only" option
      is used in plasma-settings. (Closes: #523862)
    - fixes the disappearing hotkey of klipper. (Closes: #651549)
  * Team upload.

  [ Eshat Cakar ]
  * Add myself to uploaders.
  * Bump kdelibs5-dev build dependency to version 4:4.8.
  * Refresh patches.
  * Build-depend on kdepimlibs >= 4.8 and new libkactivities-dev.
  * Update not-installed files.
  * Update installed files.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.8.3.
  * Bump Standards-Version to 3.9.3, no changes needed.
  * Update symbols files.
  * Bump sonames due to binary incompatible changes:
    - libplasmaclock4abi2 -> libplasmaclock4abi3
    - libtaskmanager4abi2 -> libtaskmanager4abi3
    - libkworkspace4 -> libkworkspace4abi1
    - libkwineffects1abi2 -> libkwineffects1abi3
  * Drop libgles2-mesa-dev [linux-any kfreebsd-any] build dependency for now and
    add it to Build-Conflicts, this disables Open GL ES compositing in kwin.
  * Add libkwinglutils1 package, with symbols file.

  [ Pino Toscano ]
  * Fix a typo in the description of kmenuedit. (Closes: #665404)

  [ Modestas Vainius ]