@@ -1,6 +1,6 @@
 --- a/kdm/kfrontend/genkdmconf.c
 +++ b/kdm/kfrontend/genkdmconf.c
-@@ -3145,9 +3145,11 @@ int main(int argc, char **argv)
+@@ -3154,9 +3154,11 @@ int main(int argc, char **argv)
                  memcmp(oldkde + olen - sizeof(SHR_CONF) + 1,
                         SHR_CONF, sizeof(SHR_CONF)))
              {
