@@ -5,7 +5,7 @@ Author: Fathi Boudra <fabo@debian.org>
 
 --- a/kdm/kfrontend/genkdmconf.c
 +++ b/kdm/kfrontend/genkdmconf.c
-@@ -692,7 +692,12 @@ static const char def_reset[] =
+@@ -701,7 +701,12 @@ static const char def_reset[] =
  "#chown root /dev/console\n"
  "#chmod 622 /dev/console\n"
  "\n"
