@@ -60,7 +60,7 @@ least FTBFS, so that we have the chance to inspect.
  
 --- a/kdm/kfrontend/genkdmconf.c
 +++ b/kdm/kfrontend/genkdmconf.c
-@@ -2918,7 +2918,7 @@ fprintfLineWrap(FILE *f, const char *msg
+@@ -2927,7 +2927,7 @@ fprintfLineWrap(FILE *f, const char *msg
  
  
  static const char * const oldkdes[] = {
@@ -69,7 +69,7 @@ least FTBFS, so that we have the chance to inspect.
      "/opt/kde4/share/config",
      "/usr/local/kde4/share/config",
  
-@@ -2926,6 +2926,7 @@ static const char * const oldkdes[] = {
+@@ -2935,6 +2935,7 @@ static const char * const oldkdes[] = {
      "/usr/local/kde/share/config",
      "/usr/local/share/config",
      "/usr/share/config",
@@ -77,7 +77,7 @@ least FTBFS, so that we have the chance to inspect.
  
      "/opt/kde3/share/config",
      "/usr/local/kde3/share/config",
-@@ -2969,7 +2970,7 @@ int main(int argc, char **argv)
+@@ -2978,7 +2979,7 @@ int main(int argc, char **argv)
  "    Note that you possibly need to use --no-old-kde to make this take effect.\n"
  "  --old-kde /path/to/old/kde-config-dir\n"
  "    Where to look for the kdmrc of a previously installed kdm.\n"
